add readme and some links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <img src="https://avatars.githubusercontent.com/u/106886725?v=4" alt="Foto de Perfil">
         <a href="https://www.instagram.com/phe.lip3/" target="_blank">@phe.lip3</a>
         <ul class="cardLink">
-            <li><a href="https://phelipescript.github.io/nlw-copa-card/" target="_blank">NLW Card Copa</a></li>
             <li><a href="https://explorer-lab-01-delta-jade.vercel.app/" target="_blank">Rocket Pay</a></li>
-            <li>link 3</li>
-            <li>link 4</li>
+            <li><a href="https://phelipescript.github.io/responsive-sidebar-menu/" target="_blank">Responsive Sidebar Menu</a></li>
+            <li><a href="https://phelipescript.github.io/nlw-copa-card/" target="_blank">NLW Card Copa</a></li>
+            <li><a href="https://phelipescript.github.io/countdown/" target="_blank">Countdown Timer</a></li>
         </ul>
         <ul class="logoImage">
             <li>
